attempt at fixing the download icon on safari

--- a/style.css
+++ b/style.css
@@ -103,8 +103,8 @@ header {
 }
 
 .download-button img {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 9px;
+  height: 12px;
 }
 
 .download-button span {
